--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "changelog": "auto-changelog -p",
     "preversion": "npm run changelog",
     "version": "npm run replace-version && git add -A",
-    "postversion": "git push",
+    "postversion": "git push && git push --tags",
     "replace-version": "replace-in-file --configFile ./.replace-in-file.config.js"
   },
   "devDependencies": {
