--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "cms",
         "craftcms",
         "craft-plugin",
-        "billingo for craft commerce"
+        "billingo for craft commerce",
+        "invoicing",
+        "integration"
     ],
     "support": {
         "docs": "https://github.com/webmenedzser/billingo-for-craft-commerce/blob/master/README.md",
