update changelog generation

--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
   },
   "scripts": {
     "changelog": "auto-changelog -p",
-    "preversion": "npm run changelog",
     "version": "npm run replace-version && git add -A",
-    "postversion": "git push && git push --tags",
+    "postversion": "npm run changelog && git commit CHANGELOG.md -m 'changelog update' && git push && git push --tags",
     "replace-version": "replace-in-file --configFile ./.replace-in-file.config.js"
   },
   "devDependencies": {
