Remove changelog commit from changelog generation

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "git+https://github.com/webmenedzser/billingo-for-craft-commerce.git"
   },
   "scripts": {
-    "changelog": "auto-changelog -p && git commit CHANGELOG.md -m 'changelog update'",
+    "changelog": "auto-changelog -p",
     "version": "npm run replace-version && npm run changelog && git add -A",
     "postversion": "git push && git push --tags",
     "replace-version": "replace-in-file --configFile ./.replace-in-file.config.js"
