--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^3.0.0-RC1",
-        "craftcms/commerce": "^3.0.0",
+        "craftcms/cms": "^4.0.0",
+        "craftcms/commerce": "^4.0.0",
         "froccsos/billingo-api-connector": "^1.1.1"
     },
     "autoload": {
